weighted avg 2nd derv calc

--- a/main.ipynb
+++ b/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 447,
    "id": "5de66751",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 448,
    "id": "51d687fc",
    "metadata": {},
    "outputs": [],
@@ -60,25 +60,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 449,
    "id": "5311cf76",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calc_4points_bezier_path(sx, sy, syaw, ex, ey, eyaw, offset):\n",
     "\n",
-    "    dist = np.hypot(sx - ex, sy - ey) * offset\n",
-    "    control_points = np.array(\n",
-    "        [[sx, sy],\n",
-    "         [sx + dist * np.cos(syaw), sy + dist * np.sin(syaw)],\n",
-    "         [ex - dist * np.cos(eyaw), ey - dist * np.sin(eyaw)],\n",
-    "         [ex, ey]])\n",
-    "\n",
-    "    path = calc_bezier_path(control_points, n_points=170)\n",
-    "    return path, control_points\n",
-    "\n",
-    "    \n",
-    "#Creating quintic bezier path controlling position, yaw, second derivative at start and end points\n",
+    "#Creating quintic bezier path controlling position, first, second derivative at start and end points\n",
     "def calc_5ord_bezier_path(sx, sy, sd, sdd, ex, ey, ed, edd, offset_1, offset_2):\n",
     "\n",
     "    sd = np.multiply(sd, 0.2*offset_1)\n",
@@ -118,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 450,
    "id": "4f493601",
    "metadata": {},
    "outputs": [],
@@ -220,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 451,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,14 +244,16 @@
     "The heading is formed as the normal to the bisector of the angle formed at each waypoint. The target heading at the start and end waypoint are fixed as is. The first derivative vector is obtained from the target heading and the less of the distances to the next or previous waypoint.  http://www2.informatik.uni-freiburg.de/~lau/students/Sprunk2008.pdf\n",
     "\n",
     "![](figures/heuristic.png)  \n",
-    "![](figures/2nd_der.png)"
+    "![](figures/2nd_der.png)\n",
+    "![](figures/weighted_avg.png)\n",
+    "![](figures/weights.png)"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 452,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,8 +268,25 @@
     "        for n in range(n_points):\n",
     "\n",
     "            # for startpoint, start conditions of first bezier curve\n",
-    "            if (n == 0) or (n == n_points-1):\n",
-    "                dd_vect = [0,0]\n",
+    "            if n == 0:\n",
+    "                b = np.array([ax[n], ay[n]])\n",
+    "                c = np.array([ax[n+1], ay[n+1]])\n",
+    "                tb = np.array([dx[n], dy[n]])\n",
+    "                tc = np.array([dx[n+1], dy[n+1]])\n",
+    "\n",
+    "                dd_vect = -6.0*b - 4.0*tb - 2.0*tc + 6.0*c\n",
+    "                dd_vect = [0, 0]\n",
+    "\n",
+    "            elif n == n_points - 1:\n",
+    "                a = np.array([ax[n-1], ay[n-1]])\n",
+    "                b = np.array([ax[n], ay[n]])\n",
+    "                ta = np.array([dx[n-1], dy[n-1]])\n",
+    "                tb = np.array([dx[n], dy[n]])\n",
+    "\n",
+    "                dd_vect = 6.0*a + 2.0*ta + 4.0*tb - 6.0*b\n",
+    "                dd_vect = [0, 0]\n",
+    "\n",
+    "\n",
     "\n",
     "            # for all points in between, take weighted average at discontinuity\n",
     "            else:\n",
@@ -290,62 +297,27 @@
     "                ta = np.array([dx[n-1], dy[n-1]])\n",
     "                tb = np.array([dx[n], dy[n]])\n",
     "                tc = np.array([dx[n+1], dy[n+1]])\n",
-    "                dd_vect = 0.5*(6.0*a + 2.0*ta + 4.0*tb - 6.0*b) + 0.5*(-6.0*b - 4.0*tb - 2.0*tc + 6.0*c)\n",
+    "\n",
+    "                # determining distance for calculating weights\n",
+    "                ab = a-b\n",
+    "                bc = b-c\n",
+    "                ab = np.hypot(ab[0], ab[1])\n",
+    "                bc = np.hypot(bc[0], bc[1])\n",
+    "                alpha = bc / (ab + bc)\n",
+    "                beta = ab / (ab + bc)\n",
+    "\n",
+    "                dd_vect = alpha*(6.0*a + 2.0*ta + 4.0*tb - 6.0*b) + beta*(-6.0*b - 4.0*tb - 2.0*tc + 6.0*c)\n",
     "\n",
     "            ddx.append(dd_vect[0])\n",
     "            ddy.append(dd_vect[1])\n",
     "\n",
-    "        return ddx, ddy\n",
-    "\n",
-    "    \"\"\"\n",
-    "    # Calculates the second derivative conditions for an input waypointbased on approach in\n",
-    "    # http://www2.informatik.uni-freiburg.de/~lau/students/Sprunk2008.pdf\n",
-    "    def calc_2nd_derivative_heuristic(self, ax, ay):\n",
-    "\n",
-    "        # array of second derivative conditions, initialized with start condition of 0\n",
-    "        ddx, ddy = [0.0], [0.0]\n",
-    "\n",
-    "        # target yaw\n",
-    "        dyaw, _ = self.calc_yaw_curvature(ax, ay)\n",
-    "        ayaw = dyaw.copy()  \n",
-    "        for n in range(1, len(ax)-1):\n",
-    "            yaw = 0.5*(dyaw[n] + dyaw[n-1])\n",
-    "            ayaw[n] = yaw\n",
-    "\n",
-    "        # range of endpoints from which to calc average\n",
-    "        endpoint_range = 7\n",
-    "\n",
-    "        # for n waypoints, n-2 waypoints, excluding start and end are assigned 2nd derivative conditions\n",
-    "        for i in range(len(ax)-2):\n",
-    "\n",
-    "            # bezier path before\n",
-    "            path1, _ = calc_4points_bezier_path(ax[i], ay[i], ayaw[i], ax[i+1], ay[i+1], ayaw[i+1], 0.4)\n",
-    "            dx1, dy1 = self.calc_d(path1.T[0], path1.T[1])\n",
-    "            ddx1, ddy1 = self.calc_d(dx1, dy1)\n",
-    "            ddx1 = np.mean( ddx1[-endpoint_range:] )\n",
-    "            ddy1 = np.mean( ddy1[-endpoint_range:] )\n",
-    "\n",
-    "            # bezier path after\n",
-    "            path2, _ = calc_4points_bezier_path(ax[i+1], ay[i+1], ayaw[i+1], ax[i+2], ay[i+2], ayaw[i+2], 0.4)\n",
-    "            dx2, dy2 = self.calc_d(path2.T[0], path2.T[1])\n",
-    "            ddx2, ddy2 = self.calc_d(dx2, dy2)\n",
-    "            ddx2 = np.mean( ddx2[:endpoint_range] )\n",
-    "            ddy2 = np.mean( ddy2[:endpoint_range] )\n",
-    "\n",
-    "            ddx.append( (ddx1 + ddx2) * 0.5 )\n",
-    "            ddy.append( (ddy1 + ddy2) * 0.5 )\n",
-    "        \n",
-    "        # append end conditions\n",
-    "        ddx.append(0.0)\n",
-    "        ddy.append(0.0)\n",
-    "\n",
-    "        return ddx, ddy\"\"\""
+    "        return ddx, ddy"
    ]
   },
   {
    "source": [
     "# Quintic Bezier Curves in Segments\n",
-    "A single quintic bezier curve is fit in each segment, described by the following diagram \n",
+    "A single quintic bezier curve is fit in each segment, with a specified vector specifying tangent length as described\n",
     "![](figures/cubic_segment.png)"
    ],
    "cell_type": "markdown",
@@ -353,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 453,
    "id": "b47c439f",
    "metadata": {},
    "outputs": [],
@@ -386,35 +358,6 @@
     "                ctr_pt_x.append( p[0] )\n",
     "                ctr_pt_y.append( p[1] )\n",
     "\n",
-    "        return cx, cy, ctr_pt_x, ctr_pt_y\n",
-    "\n",
-    "    # Bezier path one as per the approach suggested in\n",
-    "    # https://users.soe.ucsc.edu/~elkaim/Documents/camera_WCECS2008_IEEE_ICIAR_58.pdf\n",
-    "    def cubic_bezier_path(self, ax, ay):\n",
-    "\n",
-    "        dyaw, _ = self.calc_yaw_curvature(ax, ay)\n",
-    "        \n",
-    "        # control point and path array\n",
-    "        cx, cy, ctr_pt_x, ctr_pt_y = [], [], [], []\n",
-    "\n",
-    "        ayaw = dyaw.copy()\n",
-    "\n",
-    "        for n in range(1, len(ax)-1):\n",
-    "            yaw = 0.5*(dyaw[n] + dyaw[n-1])\n",
-    "            ayaw[n] = yaw\n",
-    "\n",
-    "        # for n waypoints, there are n-1 bezier curves\n",
-    "        for i in range(len(ax)-1):\n",
-    "\n",
-    "            path, points = calc_4points_bezier_path(ax[i], ay[i], ayaw[i], ax[i+1], ay[i+1], ayaw[i+1], 0.4)\n",
-    "            cx = np.concatenate((cx, path.T[0][:-1]))\n",
-    "            cy = np.concatenate((cy, path.T[1][:-1]))\n",
-    "            cyaw, k = self.calc_yaw_curvature(cx, cy)\n",
-    "\n",
-    "            for p in points:\n",
-    "                ctr_pt_x.append( p[0] )\n",
-    "                ctr_pt_y.append( p[1] )\n",
-    "\n",
     "        return cx, cy, ctr_pt_x, ctr_pt_y"
    ]
   },
@@ -432,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 454,
    "id": "a17b92b9",
    "metadata": {},
    "outputs": [],
@@ -460,16 +403,13 @@
     "        # cost of curvature continuity\n",
     "        dk, _ = self.calc_d(k, k)\n",
     "        absolute_dk = np.square(dk)\n",
-    "        continuity_cost = 40 * np.mean(absolute_dk)  \n",
+    "        continuity_cost = 70 * np.mean(absolute_dk)  \n",
     "\n",
     "        # curvature cost\n",
     "        absolute_k = np.square(k)\n",
     "        curvature_cost = 1 * np.mean(absolute_k)\n",
     "\n",
-    "        # distance cost \n",
-    "        distance_cost = 0.1 * self.calc_path_dist(bx, by)\n",
-    "\n",
-    "        return continuity_cost + curvature_cost\n",
+    "        return continuity_cost\n",
     "\n",
     "    # Minimize quintic objective function\n",
     "    def optimize_min_quintic(self):\n",
@@ -527,21 +467,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 455,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "TypeError",
-     "evalue": "calc_2nd_derivative_heuristic() missing 2 required positional arguments: 'dx' and 'dy'",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<timed exec>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-395-4534528d3e82>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, ax, ay, bound)\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m         \u001b[0;31m# default unoptimized cubic bezier path to initialize curvature\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m         \u001b[0mbx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mby\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mctr_pt_x\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mctr_pt_y\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquintic_bezier_path\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0max\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0may\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m         \u001b[0mbyaw\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbk\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcalc_yaw_curvature\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mby\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdefault_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPath\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mby\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbyaw\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-398-910576757852>\u001b[0m in \u001b[0;36mquintic_bezier_path\u001b[0;34m(self, ax, ay, offset)\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0;31m# obtain target second derivative\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[0mdx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcalc_1st_derivative_heuristic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0max\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0may\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m         \u001b[0mddx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mddy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcalc_2nd_derivative_heuristic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0max\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0may\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m         \u001b[0;31m# for n waypoints, there are n-1 bezier curves\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: calc_2nd_derivative_heuristic() missing 2 required positional arguments: 'dx' and 'dy'"
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "CPU times: user 70.2 ms, sys: 146 µs, total: 70.4 ms\n",
+      "Wall time: 69.7 ms\n",
+      "Attempting optimization minima\n",
+      "optimized true\n",
+      "CPU times: user 1.16 s, sys: 89 ms, total: 1.25 s\n",
+      "Wall time: 4.82 s\n"
      ]
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "5bc60c42d0a34d1182ce790a4c43c5a7"
+      }
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "9780a753295340df96c9b213ab9c0b51"
+      }
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "080a9cf898824beea3b562e95aa2b481"
+      }
+     },
+     "metadata": {}
     }
    ],
    "source": [
