--- a/main.ipynb
+++ b/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 447,
+   "execution_count": 73,
    "id": "5de66751",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 448,
+   "execution_count": 74,
    "id": "51d687fc",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 449,
+   "execution_count": 75,
    "id": "5311cf76",
    "metadata": {},
    "outputs": [],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 450,
+   "execution_count": 76,
    "id": "4f493601",
    "metadata": {},
    "outputs": [],
@@ -117,10 +117,6 @@
     "        \n",
     "        #input waypoint coordinates\n",
     "        ayaw, k = self.calc_yaw_curvature(ax, ay)\n",
-    "        dyaw = ayaw.copy()\n",
-    "        for n in range(1, len(ax)-1):\n",
-    "            yaw = 0.5*(dyaw[n] + dyaw[n-1])\n",
-    "            ayaw[n] = yaw\n",
     "        self.waypoints = Path(ax, ay, ayaw, k)\n",
     "        \n",
     "        # defines and sets left and right boundary lines\n",
@@ -130,7 +126,7 @@
     "        self.right_bound = Path(rax, ray, None, None)\n",
     "\n",
     "        # default unoptimized cubic bezier path to initialize curvature\n",
-    "        bx, by, ctr_pt_x, ctr_pt_y = self.quintic_bezier_path(ax, ay, [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])\n",
+    "        bx, by, ctr_pt_x, ctr_pt_y = self.quintic_bezier_path(ax, ay, [False])\n",
     "        byaw, bk = self.calc_yaw_curvature(bx, by)\n",
     "        self.default_path = Path(bx, by, byaw, bk)\n",
     "\n",
@@ -181,6 +177,10 @@
     "    # Determines position of boundary lines for visualization\n",
     "    def init_boundary(self):\n",
     "\n",
+    "        dyaw = self.waypoints.yaw.copy()\n",
+    "        for n in range(1, len(ax)-1):\n",
+    "            self.waypoints.yaw[n] = 0.5*(dyaw[n] + dyaw[n-1])\n",
+    "\n",
     "        rax, ray, lax, lay = [], [], [], []\n",
     "\n",
     "        for n in range(0, len(self.waypoints.yaw)):\n",
@@ -197,7 +197,7 @@
    "id": "66759407",
    "metadata": {},
    "source": [
-    "## Determining Heading & First Derivative Vector\n",
+    "## Determining First Derivative Vector\n",
     "The heading is formed as the normal to the bisector of the angle formed at each waypoint. The target heading at the start and end waypoint are fixed as is. The first derivative vector is obtained from the target heading and the less of the distances to the next or previous waypoint.\n",
     "https://users.soe.ucsc.edu/~elkaim/Documents/camera_WCECS2008_IEEE_ICIAR_58.pdf\n",
     "\n",
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 451,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 452,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,20 +273,15 @@
     "                c = np.array([ax[n+1], ay[n+1]])\n",
     "                tb = np.array([dx[n], dy[n]])\n",
     "                tc = np.array([dx[n+1], dy[n+1]])\n",
-    "\n",
     "                dd_vect = -6.0*b - 4.0*tb - 2.0*tc + 6.0*c\n",
-    "                dd_vect = [0, 0]\n",
     "\n",
+    "            # for endpoint, take end conditions of last bezier curve\n",
     "            elif n == n_points - 1:\n",
     "                a = np.array([ax[n-1], ay[n-1]])\n",
     "                b = np.array([ax[n], ay[n]])\n",
     "                ta = np.array([dx[n-1], dy[n-1]])\n",
     "                tb = np.array([dx[n], dy[n]])\n",
-    "\n",
     "                dd_vect = 6.0*a + 2.0*ta + 4.0*tb - 6.0*b\n",
-    "                dd_vect = [0, 0]\n",
-    "\n",
-    "\n",
     "\n",
     "            # for all points in between, take weighted average at discontinuity\n",
     "            else:\n",
@@ -316,16 +311,17 @@
   },
   {
    "source": [
-    "# Quintic Bezier Curves in Segments\n",
-    "A single quintic bezier curve is fit in each segment, with a specified vector specifying tangent length as described\n",
-    "![](figures/cubic_segment.png)"
+    "## Quintic Bezier Curves in Segments\n",
+    "The first and second derivative conditions at each waypoint are determined as vectors with magnitude varying with segment length. Then, a single quintic bezier curve is fit into each segment within these conditions.\n",
+    "\n",
+    "![](figures/segments.png)"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 453,
+   "execution_count": 79,
    "id": "b47c439f",
    "metadata": {},
    "outputs": [],
@@ -334,6 +330,9 @@
     "\n",
     "    # Approximated quintic bezier path with curvature continuity\n",
     "    def quintic_bezier_path(self, ax, ay, offset):\n",
+    "\n",
+    "        if any(offset) == False:\n",
+    "            offset = np.ones(len(ax))\n",
     "\n",
     "        dyaw, _ = self.calc_yaw_curvature(ax, ay)\n",
     "        \n",
@@ -375,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 454,
+   "execution_count": 80,
    "id": "a17b92b9",
    "metadata": {},
    "outputs": [],
@@ -403,13 +402,13 @@
     "        # cost of curvature continuity\n",
     "        dk, _ = self.calc_d(k, k)\n",
     "        absolute_dk = np.square(dk)\n",
-    "        continuity_cost = 70 * np.mean(absolute_dk)  \n",
+    "        continuity_cost = 160 * np.mean(absolute_dk)  \n",
     "\n",
     "        # curvature cost\n",
     "        absolute_k = np.square(k)\n",
     "        curvature_cost = 1 * np.mean(absolute_k)\n",
     "\n",
-    "        return continuity_cost\n",
+    "        return continuity_cost + curvature_cost\n",
     "\n",
     "    # Minimize quintic objective function\n",
     "    def optimize_min_quintic(self):\n",
@@ -467,19 +466,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 455,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "CPU times: user 70.2 ms, sys: 146 µs, total: 70.4 ms\n",
-      "Wall time: 69.7 ms\n",
+      "CPU times: user 91.4 ms, sys: 200 µs, total: 91.6 ms\n",
+      "Wall time: 90.2 ms\n",
       "Attempting optimization minima\n",
       "optimized true\n",
-      "CPU times: user 1.16 s, sys: 89 ms, total: 1.25 s\n",
-      "Wall time: 4.82 s\n"
+      "CPU times: user 1.47 s, sys: 59.9 ms, total: 1.53 s\n",
+      "Wall time: 6.09 s\n"
      ]
     },
     {
@@ -489,7 +488,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "5bc60c42d0a34d1182ce790a4c43c5a7"
+       "model_id": "14c17059f01f41a7b6b04581fa54fc08"
       }
      },
      "metadata": {}
@@ -501,7 +500,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "9780a753295340df96c9b213ab9c0b51"
+       "model_id": "f401f252964348ad9cd6ada551388575"
       }
      },
      "metadata": {}
@@ -513,7 +512,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "080a9cf898824beea3b562e95aa2b481"
+       "model_id": "720d920880e049398ff2b006a6554d73"
       }
      },
      "metadata": {}
