--- a/main.ipynb
+++ b/main.ipynb
@@ -5,16 +5,15 @@
    "id": "e68e0b35",
    "metadata": {},
    "source": [
-    "# Offline Path Planning Optimization by Segmented Bezier Curves\n",
+    "# Cubic Bezier Curves in Each Segment\n",
+    "### Offline Path Planning Optimization\n",
     "\n",
-    "This notebook demonstrates a practical example of path planning using Bezier curves in each segment. In both explored approaches, a single Bezier curve is fit within each segment. The control points are then determined to obtain a path of minimum curvature, curvature variation with curvature continuity.\n",
-    "\n",
-    "![](figures/cubic_segment.png)"
+    "A single cubic Bezier curve is fit within each segment or between two waypoints at a time, and the control points are varied to obtain a path of minimum curvature, curvature variation and curvature continuity."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 135,
    "id": "5de66751",
    "metadata": {},
    "outputs": [],
@@ -34,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 136,
    "id": "51d687fc",
    "metadata": {},
    "outputs": [],
@@ -52,26 +51,23 @@
    "id": "790d02ab",
    "metadata": {},
    "source": [
-    "## Calculating Bezier Curve Control Points\n",
+    "## Calculating Cubic Bezier Curve Control Points\n",
     "\n",
-    "### Cubic Bezier Path\n",
     "A cubic Bezier path requires 4 control points, solved by being input the start and end conditions in position and yaw. The offset expresses the distance from each endpoint to middle control points as a fraction of the segment length.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 137,
    "id": "5311cf76",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "Compute control points and path given start and end conditions in yaw and position for a cubic bezier spline\n",
-    "\"\"\"\n",
+    "# Compute control points and path given start and end conditions in yaw and position for a cubic bezier spline\n",
     "def calc_4points_bezier_path(sx, sy, syaw, ex, ey, eyaw, offset_1, offset_2):\n",
     "\n",
-    "    dist_1 = np.hypot(sx - ex, sy - ey) * offset_1 * 0.8\n",
-    "    dist_2 = np.hypot(sx - ex, sy - ey) * offset_2 * 0.8\n",
+    "    dist_1 = np.hypot(sx - ex, sy - ey) * offset_1\n",
+    "    dist_2 = np.hypot(sx - ex, sy - ey) * offset_2\n",
     "\n",
     "    control_points = np.array(\n",
     "        [[sx, sy],\n",
@@ -88,13 +84,13 @@
    "id": "cfee4407",
    "metadata": {},
    "source": [
-    "# Spline Class\n",
+    "## Spline Class\n",
     "A spline class is initated with an input set of waypoints and a maximum deviation. Boundary lines are constructed, and this class features functions for calculating derivatives, yaw, curvature and path distance."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 138,
    "id": "4f493601",
    "metadata": {},
    "outputs": [],
@@ -165,6 +161,10 @@
     "    # Determines position of boundary lines for visualization\n",
     "    def init_boundary(self):\n",
     "\n",
+    "        dyaw = self.waypoints.yaw.copy()\n",
+    "        for n in range(1, len(ax)-1):\n",
+    "            self.waypoints.yaw[n] = 0.5*(dyaw[n] + dyaw[n-1])\n",
+    "\n",
     "        rax, ray, lax, lay = [], [], [], []\n",
     "\n",
     "        for n in range(0, len(self.waypoints.yaw)):\n",
@@ -182,16 +182,16 @@
    "id": "66759407",
    "metadata": {},
    "source": [
-    "## Piecewise Bezier Curve Interpolation Through Waypoints\n",
+    "## Fitting Cubic Bezier Curves in Each Segment\n",
+    "The heading condition at each waypoint is determined as the normal to the bisector of the angle formed from the 2 adjacent waypoints. The discontinuity at the point of joining two Bezier curves is calculated as it is to be minimized.\n",
+    "https://users.soe.ucsc.edu/~elkaim/Documents/camera_WCECS2008_IEEE_ICIAR_58.pdf'\n",
     "\n",
-    "### Determining Heading Conditions\n",
-    "The heading condition at each waypoint is determined as the normal to the bisector of the angle formed from the 2 adjacent waypoints.\n",
-    "https://users.soe.ucsc.edu/~elkaim/Documents/camera_WCECS2008_IEEE_ICIAR_58.pdf"
+    "![](figures/cubic_segment.png)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 139,
    "id": "b47c439f",
    "metadata": {},
    "outputs": [],
@@ -202,32 +202,25 @@
     "    # https://users.soe.ucsc.edu/~elkaim/Documents/camera_WCECS2008_IEEE_ICIAR_58.pdf\n",
     "    def cubic_bezier_path(self, ax, ay, offset_1, offset_2):\n",
     "\n",
-    "        dyaw, _ = self.calc_yaw_curvature(ax, ay)\n",
-    "\n",
-    "        if (len(offset_1) == 0 or len(offset_2) == 0):\n",
-    "            offset_1 = []\n",
-    "            offset_2 = []\n",
+    "        if (len(offset_1) == 0):\n",
+    "            offset_1, offset_2 = [], []\n",
     "            for n in range(len(ax)-1):\n",
-    "                offset_1.append(0.7)\n",
-    "                offset_2.append(0.7)\n",
+    "                offset_1.append(1/3)\n",
+    "                offset_2.append(1/3)\n",
     "\n",
     "        k_1 = []            # start curvatures, assuming subsequent path starts with 0.0\n",
     "        k_2 = [0.0]         # end curvatures, assuming prior path ends with 0.0\n",
-    "        eval_range = 10      # range of points to evaluate curvature\n",
+    "        eval_range = 3     # range of points to evaluate curvature\n",
     "\n",
     "        # control point and path array\n",
     "        cx, cy, ctr_pt_x, ctr_pt_y = [], [], [], []\n",
     "\n",
-    "        ayaw = dyaw.copy()\n",
-    "\n",
-    "        for n in range(1, len(ax)-1):\n",
-    "            yaw = 0.5*(dyaw[n] + dyaw[n-1])\n",
-    "            ayaw[n] = yaw\n",
-    "\n",
     "        # for n waypoints, there are n-1 bezier curves\n",
     "        for i in range(len(ax)-1):\n",
     "\n",
-    "            path, points = calc_4points_bezier_path(ax[i], ay[i], ayaw[i], ax[i+1], ay[i+1], ayaw[i+1], offset_1[i], offset_2[i])\n",
+    "            path, points = calc_4points_bezier_path(ax[i], ay[i], self.waypoints.yaw[i], \n",
+    "                                                    ax[i+1], ay[i+1], self.waypoints.yaw[i+1],\n",
+    "                                                    offset_1[i], offset_2[i])\n",
     "            cx = np.concatenate((cx, path.T[0][:-1]))\n",
     "            cy = np.concatenate((cy, path.T[1][:-1]))\n",
     "            cyaw, k = self.calc_yaw_curvature(cx, cy)\n",
@@ -236,10 +229,11 @@
     "            k_1.append( np.mean(k[0:eval_range]) )\n",
     "            k_2.append( np.mean(k[-eval_range:]) )\n",
     "\n",
+    "\n",
     "            for p in points:\n",
     "                ctr_pt_x.append( p[0] )\n",
     "                ctr_pt_y.append( p[1] )\n",
-    "        \n",
+    "\n",
     "        k_1.append(0.0)\n",
     "        k_discontinuity = np.subtract(k_1,k_2)\n",
     "\n",
@@ -260,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 140,
    "id": "a17b92b9",
    "metadata": {},
    "outputs": [],
@@ -288,18 +282,18 @@
     "\n",
     "        # cost of curvature continuity\n",
     "        dk, _ = self.calc_d(k, k)\n",
-    "        absolute_dk = np.absolute(dk)\n",
-    "        continuity_cost = 3.0 * np.mean(absolute_dk)**2\n",
+    "        absolute_dk = np.square(dk)\n",
+    "        continuity_cost = 3.0 * np.mean(absolute_dk)\n",
     "\n",
     "        # curvature cost\n",
-    "        absolute_k = np.absolute(k)\n",
-    "        curvature_cost = 4.0 * np.mean(absolute_k)**2\n",
+    "        absolute_k = np.square(k)\n",
+    "        curvature_cost = 4.0 * np.mean(absolute_k)\n",
     "        \n",
     "        # cost of curvature breaks\n",
-    "        absolute_breaks = np.absolute(breaks)\n",
-    "        break_cost = 20.0 * np.mean(absolute_breaks)**2\n",
+    "        absolute_breaks = np.square(breaks)\n",
+    "        break_cost = 1.0 * np.mean(absolute_breaks)\n",
     "\n",
-    "        return break_cost + curvature_cost + continuity_cost\n",
+    "        return curvature_cost + continuity_cost + break_cost\n",
     "\n",
     "    # Minimize objective function using scipy optimize minimize\n",
     "    def optimize_min_cubic(self):\n",
@@ -311,7 +305,7 @@
     "        for n in range(len(self.waypoints.yaw)-2):\n",
     "            bnds.append((-self.bound, self.bound))\n",
     "        for n in range(2*len(self.waypoints.yaw)-2):\n",
-    "            bnds.append((0, 1.0))\n",
+    "            bnds.append((0, 0.5))\n",
     "        bnds = tuple(bnds)\n",
     "\n",
     "        # create initial guess for deviation and tangent lengths\n",
@@ -319,10 +313,9 @@
     "        for n in range(len(self.waypoints.yaw)-2):\n",
     "            initial_guess.append(0.0)\n",
     "        for n in range(2*len(self.waypoints.yaw)-2):\n",
-    "            initial_guess.append(0.7)\n",
+    "            initial_guess.append(1.0)\n",
     "\n",
     "        result = minimize_parallel(self.cubic_objective_func, initial_guess, bounds=bnds)\n",
-    "        # result = optimize.minimize(self.cubic_objective_func, initial_guess, bounds=bnds, method='L-BFGS-B')\n",
     "\n",
     "        ax = self.waypoints.x.copy()\n",
     "        ay = self.waypoints.y.copy()\n",
@@ -353,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 134,
    "id": "fbb27494",
    "metadata": {},
    "outputs": [
@@ -363,8 +356,8 @@
      "text": [
       "Attempting optimization minima\n",
       "optimized true\n",
-      "CPU times: user 9.4 s, sys: 185 ms, total: 9.58 s\n",
-      "Wall time: 36 s\n"
+      "CPU times: user 18.5 s, sys: 316 ms, total: 18.8 s\n",
+      "Wall time: 1min 36s\n"
      ]
     },
     {
@@ -374,7 +367,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "5aa40ca408be4963b56d46be13d0acbc"
+       "model_id": "9ec99cdd9f664c4ea64ab76000f596aa"
       }
      },
      "metadata": {}
@@ -386,7 +379,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "0dca273ea72e42c0b3531c9d4db517e5"
+       "model_id": "d5767dd42bee47caa64e00c1a0af678c"
       }
      },
      "metadata": {}
@@ -398,7 +391,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "e89e8669691144c4858959fc63924c7c"
+       "model_id": "e5dfb91914774545aa7e148f5f6d72f0"
       }
      },
      "metadata": {}
