--- a/main.ipynb
+++ b/main.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 156,
    "id": "5de66751",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 157,
    "id": "51d687fc",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 158,
    "id": "5311cf76",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 159,
    "id": "4f493601",
    "metadata": {},
    "outputs": [],
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 160,
    "id": "b47c439f",
    "metadata": {},
    "outputs": [],
@@ -210,7 +210,7 @@
     "\n",
     "        k_1 = []            # start curvatures, assuming subsequent path starts with 0.0\n",
     "        k_2 = [0.0]         # end curvatures, assuming prior path ends with 0.0\n",
-    "        eval_range = 3     # range of points to evaluate curvature\n",
+    "        eval_range = 7      # range of points to evaluate curvature\n",
     "\n",
     "        # control point and path array\n",
     "        cx, cy, ctr_pt_x, ctr_pt_y = [], [], [], []\n",
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 161,
    "id": "a17b92b9",
    "metadata": {},
    "outputs": [],
@@ -283,11 +283,11 @@
     "        # cost of curvature continuity\n",
     "        dk, _ = self.calc_d(k, k)\n",
     "        absolute_dk = np.square(dk)\n",
-    "        continuity_cost = 3.0 * np.mean(absolute_dk)\n",
+    "        continuity_cost = 7.0 * np.mean(absolute_dk)\n",
     "\n",
     "        # curvature cost\n",
     "        absolute_k = np.square(k)\n",
-    "        curvature_cost = 4.0 * np.mean(absolute_k)\n",
+    "        curvature_cost = 5.0 * np.mean(absolute_k)\n",
     "        \n",
     "        # cost of curvature breaks\n",
     "        absolute_breaks = np.square(breaks)\n",
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 162,
    "id": "fbb27494",
    "metadata": {},
    "outputs": [
@@ -356,8 +356,8 @@
      "text": [
       "Attempting optimization minima\n",
       "optimized true\n",
-      "CPU times: user 18.5 s, sys: 316 ms, total: 18.8 s\n",
-      "Wall time: 1min 36s\n"
+      "CPU times: user 7.95 s, sys: 140 ms, total: 8.09 s\n",
+      "Wall time: 39.5 s\n"
      ]
     },
     {
@@ -367,7 +367,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "9ec99cdd9f664c4ea64ab76000f596aa"
+       "model_id": "360551988a9043a1b6eb5acbb6b7b565"
       }
      },
      "metadata": {}
@@ -379,7 +379,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "d5767dd42bee47caa64e00c1a0af678c"
+       "model_id": "4dd0fa3af4794d4eb3d532f59ced6db4"
       }
      },
      "metadata": {}
@@ -391,7 +391,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "e5dfb91914774545aa7e148f5f6d72f0"
+       "model_id": "aeac504741b44eb7bc7aa8938d1b1e12"
       }
      },
      "metadata": {}
