fix distance calc function and update cost function

--- a/main.ipynb
+++ b/main.ipynb
@@ -5,14 +5,15 @@
    "id": "e68e0b35",
    "metadata": {},
    "source": [
-    "# Offline Path Planning Optimization by Segmented Bezier Curves\n",
+    "# Quintic Bezier Curves in Each Segment\n",
+    "## Offline Path Planning Optimization\n",
     "\n",
-    "This notebook demonstrates a practical example of path planning using Bezier curves in each segment. In both explored approaches, a single Bezier curve is fit within each segment. The control points are then determined to obtain a path of minimum curvature, curvature variation with curvature continuity."
+    "A single cubic Bezier curve is fit within each segment or between two waypoints at a time, and the control points are varied to obtain a path of minimum curvature and curvature variation."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 82,
    "id": "5de66751",
    "metadata": {},
    "outputs": [],
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 83,
    "id": "51d687fc",
    "metadata": {},
    "outputs": [],
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 84,
    "id": "5311cf76",
    "metadata": {},
    "outputs": [],
@@ -100,13 +101,13 @@
    "id": "cfee4407",
    "metadata": {},
    "source": [
-    "# Spline Class\n",
+    "## Spline Class\n",
     "A spline class is initated with an input set of waypoints and a maximum deviation. Boundary lines are constructed, and this class features functions for calculating derivatives, yaw, curvature and path distance."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 85,
    "id": "4f493601",
    "metadata": {},
    "outputs": [],
@@ -167,8 +168,9 @@
     "    # Calculates total distance of the path\n",
     "    def calc_path_dist(self, x, y):\n",
     "\n",
-    "        dx = np.absolute(self.calc_d(np.zeros(len(x)), x))\n",
-    "        dy = np.absolute(self.calc_d(np.zeros(len(y)), y))\n",
+    "        dx, dy = self.calc_d(x, y)\n",
+    "        dx = np.absolute(dx)\n",
+    "        dy = np.absolute(dy)\n",
     "        ddist = np.hypot(dx, dy)\n",
     "\n",
     "        return np.sum(ddist)\n",
@@ -208,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +313,7 @@
   },
   {
    "source": [
-    "## Quintic Bezier Curves in Segments\n",
+    "## Fitting Quintic Bezier Curves in Each Segment\n",
     "The first and second derivative conditions at each waypoint are determined as vectors with magnitude varying with segment length. Then, a single quintic bezier curve is fit into each segment within these conditions.\n",
     "\n",
     "![](figures/segments.png)"
@@ -321,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 88,
    "id": "b47c439f",
    "metadata": {},
    "outputs": [],
@@ -374,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 89,
    "id": "a17b92b9",
    "metadata": {},
    "outputs": [],
@@ -402,7 +404,7 @@
     "        # cost of curvature continuity\n",
     "        dk, _ = self.calc_d(k, k)\n",
     "        absolute_dk = np.square(dk)\n",
-    "        continuity_cost = 160 * np.mean(absolute_dk)  \n",
+    "        continuity_cost = 5000 * np.mean(absolute_dk)  \n",
     "\n",
     "        # curvature cost\n",
     "        absolute_k = np.square(k)\n",
@@ -466,19 +468,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "CPU times: user 91.4 ms, sys: 200 µs, total: 91.6 ms\n",
-      "Wall time: 90.2 ms\n",
+      "CPU times: user 75.8 ms, sys: 0 ns, total: 75.8 ms\n",
+      "Wall time: 74.3 ms\n",
       "Attempting optimization minima\n",
       "optimized true\n",
-      "CPU times: user 1.47 s, sys: 59.9 ms, total: 1.53 s\n",
-      "Wall time: 6.09 s\n"
+      "CPU times: user 2.07 s, sys: 75.1 ms, total: 2.14 s\n",
+      "Wall time: 8.65 s\n"
      ]
     },
     {
@@ -488,7 +490,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "14c17059f01f41a7b6b04581fa54fc08"
+       "model_id": "7ebfbeb03b5d4c039b0c6dc3f67eb599"
       }
      },
      "metadata": {}
@@ -500,7 +502,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "f401f252964348ad9cd6ada551388575"
+       "model_id": "cfe371aee9f044e8be2055ab7b826396"
       }
      },
      "metadata": {}
@@ -512,7 +514,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "720d920880e049398ff2b006a6554d73"
+       "model_id": "79fa250ae9024ff5913f1f708e13ab31"
       }
      },
      "metadata": {}
