add jerk profile

--- a/main.ipynb
+++ b/main.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 45,
    "id": "5de66751",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 46,
    "id": "51d687fc",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 47,
    "id": "5311cf76",
    "metadata": {},
    "outputs": [],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 48,
    "id": "4f493601",
    "metadata": {},
    "outputs": [],
@@ -119,6 +119,9 @@
     "        #input waypoint coordinates\n",
     "        ayaw, k = self.calc_yaw_curvature(ax, ay)\n",
     "        self.waypoints = Path(ax, ay, ayaw, k)\n",
+    "\n",
+    "        self.wheelbase = 2.5\n",
+    "        self.max_steer = 0.95\n",
     "        \n",
     "        # defines and sets left and right boundary lines\n",
     "        self.bound = bound\n",
@@ -210,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,11 +227,14 @@
     "\n",
     "        for n in range(n_points):\n",
     "\n",
-    "            # linear distance to next and previous waypoint\n",
+    "            \n",
     "            if n == 0:\n",
     "                dist = np.hypot( (ax[n+1] - ax[n]), (ay[n+1] - ay[n]) )\n",
     "            elif n == n_points-1:\n",
     "                dist = np.hypot( (ax[n-1] - ax[n]), (ay[n-1] - ay[n]) )\n",
+    "\n",
+    "            # for all points except first and last, the tangent length is\n",
+    "            # minimum of the next and previous segment length\n",
     "            else: \n",
     "                d0 = np.hypot( (ax[n-1] - ax[n]), (ay[n-1] - ay[n]) )\n",
     "                d1 = np.hypot( (ax[n+1] - ax[n]), (ay[n+1] - ay[n]) )\n",
@@ -255,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 51,
    "id": "b47c439f",
    "metadata": {},
    "outputs": [],
@@ -367,7 +373,7 @@
    "id": "c9731579",
    "metadata": {},
    "source": [
-    "## Optimization Strategy\n",
+    "## Cost Function\n",
     "\n",
     "The optimization strategy is essentially to minimize curvature and variation in curvature throughout the entirety of the path\n",
     "\n",
@@ -376,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 52,
    "id": "a17b92b9",
    "metadata": {},
    "outputs": [],
@@ -411,6 +417,38 @@
     "        curvature_cost = 1 * np.mean(absolute_k)\n",
     "\n",
     "        return continuity_cost + curvature_cost\n",
+    "\n",
+    "    # penalty to return exponential cost when greater than 1\n",
+    "    def deviation_penalty(self, dev, max_dev):\n",
+    "\n",
+    "        dev = np.array(dev)\n",
+    "        dev = np.absolute(dev) / max_dev\n",
+    "        penalty = np.exp( 25 * (dev - 0.9) )\n",
+    "        return np.sum(penalty)\n",
+    "\n",
+    "    # penalty to return exponential cost when greater than 1\n",
+    "    def steering_penalty(self, k, max_steer):\n",
+    "\n",
+    "        k = np.array(k)\n",
+    "        steer_profile  = np.arctan(self.wheelbase * k)\n",
+    "        steer_cons_ratio = np.divide( np.absolute(steer_profile) , max_steer )\n",
+    "        penalty = np.exp( 25 * (steer_cons_ratio - 0.9) )"
+   ]
+  },
+  {
+   "source": [
+    "## Parallel Optimization"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Spline(Spline):\n",
     "\n",
     "    # Minimize quintic objective function\n",
     "    def optimize_min_quintic(self):\n",
@@ -462,25 +500,24 @@
     "\n",
     "        else:\n",
     "            print(\"optimization failure, defaulting\")\n",
-    "            exit()\n",
-    "\n"
+    "            exit()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "CPU times: user 75.8 ms, sys: 0 ns, total: 75.8 ms\n",
-      "Wall time: 74.3 ms\n",
+      "CPU times: user 77.9 ms, sys: 0 ns, total: 77.9 ms\n",
+      "Wall time: 76.7 ms\n",
       "Attempting optimization minima\n",
       "optimized true\n",
-      "CPU times: user 2.07 s, sys: 75.1 ms, total: 2.14 s\n",
-      "Wall time: 8.65 s\n"
+      "CPU times: user 1.46 s, sys: 62.2 ms, total: 1.52 s\n",
+      "Wall time: 8.66 s\n"
      ]
     },
     {
@@ -490,7 +527,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "7ebfbeb03b5d4c039b0c6dc3f67eb599"
+       "model_id": "8849da4aab734036ba7a19d8485ba7a6"
       }
      },
      "metadata": {}
@@ -502,7 +539,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "cfe371aee9f044e8be2055ab7b826396"
+       "model_id": "87a84bf2d7694b2a86b9e0f3ec73ac38"
       }
      },
      "metadata": {}
@@ -514,7 +551,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "79fa250ae9024ff5913f1f708e13ab31"
+       "model_id": "ba23df8158f442e28408c04aae364f41"
       }
      },
      "metadata": {}
@@ -524,7 +561,7 @@
     "    # define input path\n",
     "    ay = [0.0, 2.3, 6.25, 8.6, 8.2, 5.3, 2.6]\n",
     "    ax = [0.0, 7.16, 13.68, 22.3, 30.64, 39.6, 50.4]\n",
-    "    boundary = 2.0\n",
+    "    boundary = 1.0\n",
     "\n",
     "    %time spline = Spline(ax, ay, boundary)\n",
     "    %time spline.optimize_min_quintic()\n",
@@ -560,6 +597,39 @@
     "    plt.ylabel(\"curvature [1/m]\")\n",
     "\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "be4fe7ded9c8470297d225cd9c7714e0"
+      }
+     },
+     "metadata": {}
+    }
+   ],
+   "source": [
+    "# print jerk profile\n",
+    "def_jerk, opt_jerk = spline.calc_d(spline.default_path.k, spline.optimized_path.k)\n",
+    "\n",
+    "# Curvature plot\n",
+    "plt.subplots(1)\n",
+    "plt.plot(def_jerk[:-5], \"-y\", label=\"original\")\n",
+    "plt.plot(opt_jerk[:-5], \"-m\", label=\"optimized\")\n",
+    "plt.grid(True)\n",
+    "plt.legend()\n",
+    "plt.title(\"Jerk Profile\")\n",
+    "plt.xlabel(\"line length[m]\")\n",
+    "plt.show()\n"
    ]
   }
  ],
